--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="shortcut icon" href="C:\Users\PC\Desktop\pen-export-QWPKejO\dist\картенке\лого.png" />
+    <link rel="shortcut icon" href="картенке\лого.png" />
 
     <link rel="stylesheet" href="404.css">
 
