--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <link rel="shortcut icon" href="C:\Users\PC\Desktop\pen-export-QWPKejO\dist\картенке\лого.png" />
+  <link rel="shortcut icon" href="картенке\лого.png" />
 
   <meta charset="UTF-8">
   <title>CodePen - A Pen by Настя Гейт</title>
