--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 
         <link rel="stylesheet" href="page2style.css">
 
-        <link rel="shortcut icon" href="C:\Users\PC\Desktop\pen-export-QWPKejO\dist\картенке\лого.png" />
+        <link rel="shortcut icon" href="картенке\лого.png" />
 
 </head>
 <body>
